--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "babel-eslint": "^7.1.1",
     "babel-loader": "^6.2.10",
     "babel-preset-es2015": "^6.18.0",
+    "babel-preset-react": "^6.16.0",
     "eslint": "^3.12.2",
     "eslint-plugin-babel": "^4.0.0",
     "eslint-plugin-react": "^6.8.0",
@@ -32,6 +33,8 @@
     "gulp-uglify": "^2.0.0",
     "gulp-util": "^3.0.7",
     "pump": "^1.0.2",
+    "react": "^15.4.1",
+    "react-dom": "^15.4.1",
     "webpack": "^1.14.0",
     "webpack-dev-server": "^1.16.2"
   },
